# AniMind_Native

./: .env.example  .gitignore  README.md  VIDEO_PLAYER_ISSUES_ANALYSIS.md  electron.vite.config.ts  package-lock.json  package.json  test-addon.js  test-mpv-direct.cjs  tsconfig.json
docs/: ARCHITECTURE.md  CLERK_ELECTRON_SETUP.md  DEVELOPMENT.md  INSTALLATION.md  SYNCPLAY_AI_README.md  USAGE.md  embedded-libmpv-implementation-plan.md  libmpv-electron41-modern-spike-plan.md  react-native-migration.md  syncplay_backup.patch
native/: README.md  binding.gyp  package-lock.json  package.json
native/include/mpv/: client.h
native/src/: addon.cc
qt_host/: CMakeLists.txt
qt_host/qml/: AniListApi.qml  AnimePosterCard.qml  EpisodeThumbnailCard.qml  HorizontalScrollRow.qml  NotificationPanel.qml  SearchOverlay.qml  SideNav.qml  TopBar.qml  main.qml  qmldir
qt_host/qml/pages/: BrowsePage.qml  DetailPage.qml  HistoryPage.qml  HomePage.qml  MyListPage.qml  SearchPage.qml  SimulcastDetailPage.qml  SimulcastPage.qml  TrendingPage.qml
qt_host/src/: auth_manager.cpp  auth_manager.h  main.cpp  mpv_item.cpp  mpv_item.h
qt_host/tests/property/: computeDisplayName.property.test.js  topBarAvatar.property.test.js
qt_host/tests/unit/: aniListApi.test.js  homePage.test.js  sideNav.displayName.test.js  topBar.avatarInitial.test.js
scripts/: rebuild-native.cjs  rebuild-native.js
src/main/: index.ts
src/main/services/: auth.service.ts  library.service.ts  player.service.ts  progress.service.ts  settings.service.ts  subtitle.service.ts
src/main/services/player-backends/: mpv-embedded.backend.ts  mpv-external.backend.ts  native-addon.ts  types.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
src/renderer/src/components/: EmbeddedPlayerHost.tsx  SyncplayPanel.tsx  VideoPlayerControls.tsx
src/renderer/src/hooks/: useClerkGoogleAuth.ts  useLibrary.ts  usePlayer.ts  usePlayerController.ts  useSyncplay.ts
src/renderer/src/pages/: FirstRunSetupPage.tsx  LibraryPage.tsx  LoginPage.tsx  PlayerPage.tsx  SettingsPage.tsx
